--- a/css/styles.css
+++ b/css/styles.css
@@ -10933,7 +10933,8 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.4) 0%, rgba(92, 77, 66, 0.6) 100%), url("../assets/img/hero-lq.jpg");
+  /* background: linear-gradient(to bottom, rgba(92, 77, 66, 0.4) 0%, rgba(92, 77, 66, 0.6) 100%), url("../assets/img/hero-lq.jpg"); */
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0) 0.2%, rgba(0, 0, 0, 0.5) 100%), url("../assets/img/hero-lq.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
